@@ -6,12 +6,12 @@
 
 package me.strukteon.bulbybot.commands.dev;
 
-        import me.strukteon.bettercommand.CommandEvent;
-        import me.strukteon.bettercommand.command.CommandInfo;
-        import me.strukteon.bettercommand.command.ExtendedCommand;
-        import me.strukteon.bettercommand.syntax.Syntax;
-        import net.dv8tion.jda.core.entities.MessageChannel;
-        import net.dv8tion.jda.core.entities.User;
+import me.strukteon.bettercommand.CommandEvent;
+import me.strukteon.bettercommand.command.CommandInfo;
+import me.strukteon.bettercommand.command.ExtendedCommand;
+import me.strukteon.bettercommand.syntax.Syntax;
+import net.dv8tion.jda.core.entities.MessageChannel;
+import net.dv8tion.jda.core.entities.User;
 
 public class Pull implements ExtendedCommand {
 
@@ -19,8 +19,9 @@ public class Pull implements ExtendedCommand {
     public void onExecute(CommandEvent event, Syntax syntax, User author, MessageChannel channel) throws Exception {
 
         event.getTextChannel().sendMessage("Pulling started!").queue();
-        String[] cmds = {"/bin/sh", "bash /home/bulbybot.sh"};
-        Process p = Runtime.getRuntime().exec(cmds);
+
+        ProcessBuilder builder = new ProcessBuilder("bash /home/bulbybot.sh");
+        builder.start();
 
     }
 
